Update README.md and thought_space_simulator.ipynb: Enhance documentation and clarify thought influence mechanics

--- a/thought_space_simulator.ipynb
+++ b/thought_space_simulator.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "89eba617",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
     "        self.source = source\n",
     "        self.target = target\n",
     "        self.weight = weight\n",
-    "        self.type = type\n"
+    "        self.type = type # not used yet\n"
    ]
   },
   {
@@ -216,20 +216,18 @@
    "source": [
     "Formula explained:\n",
     "\n",
-    "t.intensity → how “strong” or “active” the current thought is.\n",
+    "Each thought can influence connected thoughts in the network.\n",
     "\n",
-    "(1 - neighbor.contradiction) → if the neighbor is highly contradictory, it resists influence; if low contradiction, it absorbs intensity more easily.\n",
+    "The amount of influence is a small fraction (5%) of the source thought’s intensity.\n",
     "\n",
-    "* 0.05 → scaling factor to make the effect gradual.\n",
+    "This models ideas propagating through a thought network: strong thoughts make related thoughts more “active” or noticeable.\n",
     "\n",
-    "Then the neighbor’s intensity increases by delta.\n",
-    "\n",
-    "min(neighbor.intensity, 1.0) ensures intensity stays between 0 and 1."
+    "Using min(neighbor.intensity, 1.0) keeps intensity in a valid range (0 to 1)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "176aae25",
    "metadata": {},
    "outputs": [],
@@ -241,15 +239,15 @@
     "\n",
     "def update_thoughts(thoughts):\n",
     "    for t in thoughts:\n",
-    "        #Each ThoughtNode starts in a ‘superposed’ state (like a quantum thought that hasn’t “decided” yet).\n",
-    "        #If a thought’s awareness is high (>0.7), it “collapses” into a definite state.\n",
+    "        # Collapse superposed thoughts based on awareness\n",
     "        if t.state == 'superposed' and t.awareness > 0.7:\n",
     "            t.state = 'collapsed'\n",
-    "        #Computes a small intensity transfer (delta) from t to its neighbor\n",
+    "\n",
+    "        # Spread intensity to neighbors (simplified)\n",
     "        for neighbor in t.links:\n",
-    "            delta = t.intensity * (1 - neighbor.contradiction) * 0.05 #\n",
+    "            delta = t.intensity * 0.05  # purely based on source intensity\n",
     "            neighbor.intensity += delta\n",
-    "            neighbor.intensity = min(neighbor.intensity, 1.0)\n"
+    "            neighbor.intensity = min(neighbor.intensity, 1.0)"
    ]
   },
   {
