--- a/epistemoverse_tss/All_philosophers.ipynb
+++ b/epistemoverse_tss/All_philosophers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "fa5dd951",
    "metadata": {},
    "outputs": [
@@ -1641,7 +1641,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
+   "id": "7f201c0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#FOR CONVENIENCE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "34e3b4c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cluster_labels = np.array([3, 3, 0, 2, 0, 4, 1, 3, 3, 3, 3, 3, 0, 2, 0, 2, 1, 1, 3, 2, 3, 2,\n",
+    "       2, 1, 3, 3, 0, 1, 3, 1, 0, 0, 1, 1, 3, 1, 3, 1, 3, 1, 3, 1, 3, 0,\n",
+    "       4, 1, 1, 3, 2, 0, 2, 0, 0, 3, 2, 2, 2, 2, 2, 2, 2, 3, 1, 1, 1, 3,\n",
+    "       2, 3, 1, 1, 1, 1, 1, 3, 1, 3, 4, 1, 1, 3, 3, 3, 3, 0, 0, 3, 3, 3,\n",
+    "       2, 0, 1, 1, 2, 2, 3, 4, 1, 1, 1, 3, 0, 2, 0, 0, 4, 2, 2, 1, 3, 0,\n",
+    "       0, 1, 3, 3, 0, 0, 0, 0, 2, 3, 2, 3, 3, 0, 2, 0, 3, 1, 2, 3, 1, 1,\n",
+    "       1, 3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "360d4dbf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "speakers = [turn['Speaker'] for turn in dialogue if turn['Text'].strip()]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "d136f592",
    "metadata": {},
    "outputs": [
@@ -1692,8 +1728,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "6f315747",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counts per cluster:\n",
+      " Philosopher  ARISTOTLE  MACHIAVELLI  NIETZSCHE  SUNTZU\n",
+      "Cluster                                               \n",
+      "0                    1           18          1       5\n",
+      "1                   25            0         11       0\n",
+      "2                   19            6          0       1\n",
+      "3                   10           12         18       2\n",
+      "4                    0            3          0       2\n",
+      "\n",
+      "Percentages per cluster:\n",
+      " Philosopher  ARISTOTLE  MACHIAVELLI  NIETZSCHE  SUNTZU\n",
+      "Cluster                                               \n",
+      "0                  4.0         72.0        4.0    20.0\n",
+      "1                 69.4          0.0       30.6     0.0\n",
+      "2                 73.1         23.1        0.0     3.8\n",
+      "3                 23.8         28.6       42.9     4.8\n",
+      "4                  0.0         60.0        0.0    40.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- Build dataframe ---\n",
+    "df = pd.DataFrame({\n",
+    "    \"Cluster\": cluster_labels,\n",
+    "    \"Philosopher\": speakers\n",
+    "})\n",
+    "\n",
+    "# Count table\n",
+    "stats_table = pd.crosstab(df[\"Cluster\"], df[\"Philosopher\"])\n",
+    "\n",
+    "# Percentage table\n",
+    "stats_percent = stats_table.div(stats_table.sum(axis=1), axis=0) * 100\n",
+    "\n",
+    "print(\"Counts per cluster:\\n\", stats_table)\n",
+    "print(\"\\nPercentages per cluster:\\n\", stats_percent.round(1))\n",
+    "\n",
+    "# --- Plot pie charts per cluster ---\n",
+    "for cluster_id in stats_table.index:\n",
+    "    counts = stats_table.loc[cluster_id]\n",
+    "    counts = counts[counts > 0]  # remove empty\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "431d9f4e",
    "metadata": {},
    "outputs": [],
    "source": []
